--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.5.0",
+        "react-simple-typewriter": "^5.0.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animate": "^1.0.7"
     },
