--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@radix-ui/react-slot": "^1.2.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.507.0",
         "next": "14.2.23",
         "react": "^18",
