--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
         "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-slot": "^1.2.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.507.0",
-        "next": "14.2.23",
+        "next": "^14.2.29",
+        "nodemailer": "^7.0.3",
         "react": "^18",
         "react-dom": "^18",
+        "react-google-reviews": "^1.7.4",
+        "react-hook-form": "^7.56.4",
         "react-icons": "^5.5.0",
         "react-simple-typewriter": "^5.0.1",
         "tailwind-merge": "^3.2.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.25.42"
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.17",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
