--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.6.0",
+        "framer-motion": "^12.18.1",
         "lucide-react": "^0.507.0",
         "next": "^14.2.29",
         "nodemailer": "^7.0.3",
